vlib/v/parser/tests/invalid_field_name_err.vv
struct MyStruct { 
	c.close int
}